crates/ty_python_semantic/resources/mdtest/snapshots/final.md_-_Tests_for_the_`@typi…_-_A_`@final`_class_mus…_-_Abstract_method_in_g…_(6d8b024dda7ced11).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: final.md - Tests for the `@typing(_extensions).final` decorator - A `@final` class must implement all abstract methods - Abstract method in grandparent class
mdtest path: crates/ty_python_semantic/resources/mdtest/final.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from abc import ABC, abstractmethod
 2 | from typing import final
 3 | 
 4 | class GrandParent(ABC):
 5 |     @abstractmethod
 6 |     def method(self) -> int: ...
 7 | 
 8 | class Parent(GrandParent):
 9 |     pass
10 | 
11 | @final
12 | class Child(Parent):  # error: [abstract-method-in-final-class]
13 |     pass
```

# Diagnostics

```
error[abstract-method-in-final-class]: Final class `Child` has unimplemented abstract methods
  --> src/mdtest_snippet.py:5:5
   |
 5 | /     @abstractmethod
 6 | |     def method(self) -> int: ...
   | |________________________________- `method` declared as abstract on superclass `GrandParent`
 7 |
 8 |   class Parent(GrandParent):
 9 |       pass
10 |
11 |   @final
   |   ------
12 |   class Child(Parent):  # error: [abstract-method-in-final-class]
   |         ^^^^^ `method` is unimplemented
   |

```
