crates/ty_python_semantic/resources/mdtest/snapshots/final.md_-_Tests_for_the_`@typi…_-_A_`@final`_class_mus…_-_Basic_case_with_ABC_(21e412599c45972a).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: final.md - Tests for the `@typing(_extensions).final` decorator - A `@final` class must implement all abstract methods - Basic case with ABC
mdtest path: crates/ty_python_semantic/resources/mdtest/final.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from abc import ABC, abstractmethod
 2 | from typing import final
 3 | 
 4 | class Base(ABC):
 5 |     @abstractmethod
 6 |     def foo(self) -> int:
 7 |         raise NotImplementedError
 8 | 
 9 | @final
10 | class Derived(Base):  # error: [abstract-method-in-final-class] "Final class `Derived` has unimplemented abstract method `foo`"
11 |     pass
```

# Diagnostics

```
error[abstract-method-in-final-class]: Final class `Derived` has unimplemented abstract methods
  --> src/mdtest_snippet.py:5:5
   |
 5 | /     @abstractmethod
 6 | |     def foo(self) -> int:
   | |________________________- `foo` declared as abstract on superclass `Base`
 7 |           raise NotImplementedError
 8 |
 9 |   @final
   |   ------
10 |   class Derived(Base):  # error: [abstract-method-in-final-class] "Final class `Derived` has unimplemented abstract method `foo`"
   |         ^^^^^^^ `foo` is unimplemented
   |

```
