crates/ty_python_semantic/resources/mdtest/snapshots/final.md_-_Tests_for_the_`@typi…_-_A_`@final`_class_mus…_-_Multiple_abstract_me…_(feafee9a4abbe8d1).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: final.md - Tests for the `@typing(_extensions).final` decorator - A `@final` class must implement all abstract methods - Multiple abstract methods
mdtest path: crates/ty_python_semantic/resources/mdtest/final.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from abc import ABC, abstractmethod
 2 | from typing import final
 3 | 
 4 | class Base(ABC):
 5 |     @abstractmethod
 6 |     def foo(self) -> int: ...
 7 |     @abstractmethod
 8 |     def bar(self) -> str: ...
 9 |     @abstractmethod
10 |     def baz(self) -> None: ...
11 | 
12 | @final
13 | class MissingAll(Base):  # error: [abstract-method-in-final-class]
14 |     pass
15 | 
16 | @final
17 | class PartiallyImplemented(Base):  # error: [abstract-method-in-final-class]
18 |     def foo(self) -> int:
19 |         return 42
20 | 
21 |     def bar(self) -> str:
22 |         return "hello"
```

# Diagnostics

```
error[abstract-method-in-final-class]: Final class `MissingAll` has unimplemented abstract methods
  --> src/mdtest_snippet.py:12:1
   |
12 |   @final
   |   ------
13 |   class MissingAll(Base):  # error: [abstract-method-in-final-class]
   |         ^^^^^^^^^^ Abstract methods `foo`, `bar` and `baz` are unimplemented
   |
  ::: src/mdtest_snippet.py:5:5
   |
 5 | /     @abstractmethod
 6 | |     def foo(self) -> int: ...
   | |_____________________________- `foo` declared as abstract on superclass `Base`
   |

```

```
error[abstract-method-in-final-class]: Final class `PartiallyImplemented` has unimplemented abstract methods
  --> src/mdtest_snippet.py:16:1
   |
16 |   @final
   |   ------
17 |   class PartiallyImplemented(Base):  # error: [abstract-method-in-final-class]
   |         ^^^^^^^^^^^^^^^^^^^^ `baz` is unimplemented
   |
  ::: src/mdtest_snippet.py:9:5
   |
 9 | /     @abstractmethod
10 | |     def baz(self) -> None: ...
   | |______________________________- `baz` declared as abstract on superclass `Base`
   |

```
