crates/ty_python_semantic/resources/mdtest/snapshots/final.md_-_Tests_for_the_`@typi…_-_A_`@final`_class_mus…_-_Protocol_with_implic…_(e373f31c7a7d88e7).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: final.md - Tests for the `@typing(_extensions).final` decorator - A `@final` class must implement all abstract methods - Protocol with implicitly abstract methods
mdtest path: crates/ty_python_semantic/resources/mdtest/final.md
---

# Python source files

## mdtest_snippet.py

```
  1 | from typing_extensions import Protocol, final, Never, overload
  2 | 
  3 | class P(Protocol):
  4 |     # There'd be no unsoundness here if a subclass of this
  5 |     # class were to be instantiated without the method having been overridden:
  6 |     # the function returns `None`, and `None` is assignable to the inferred return
  7 |     # type of the function (`Unknown`). Nonetheless, we consider this method
  8 |     # implicitly abstract anyway, since the distinction based on the return type
  9 |     # would probably be subtle and surprising to many users. This also matches the
 10 |     # behaviour of all other type checkers
 11 |     def still_abstractmethod(self): ...
 12 | 
 13 | @final
 14 | class Q(P): ...  # error: [abstract-method-in-final-class]
 15 | 
 16 | class R(Protocol):
 17 |     # same here
 18 |     def also_still_abstractmethod(self) -> None: ...
 19 | 
 20 | @final
 21 | class S(R): ...  # error: [abstract-method-in-final-class]
 22 | 
 23 | class Raises(Protocol):
 24 |     def even_this_is_abstract(self):
 25 |         raise NotImplementedError
 26 | 
 27 | @final
 28 | class RaisesSub(Raises): ...  # error: [abstract-method-in-final-class]
 29 | 
 30 | class AlsoRaises(Protocol):
 31 |     def also_abstractmethod(self) -> Never:
 32 |         raise NotImplementedError
 33 | 
 34 | @final
 35 | class AlsoRaisesSub(AlsoRaises): ...  # error: [abstract-method-in-final-class]
 36 | 
 37 | type NotImplementedErrorAlias = NotImplementedError
 38 | 
 39 | def _(x: NotImplementedErrorAlias):
 40 |     class Strange(Protocol):
 41 |         def weird_abstractmethod(self):
 42 |             raise x
 43 | 
 44 |     @final
 45 |     class StrangeSub(Strange): ...  # error: [abstract-method-in-final-class]
 46 | 
 47 | class HasOverloads(Protocol):
 48 |     @overload
 49 |     def foo(self) -> int: ...
 50 |     @overload
 51 |     def foo(self, x: int) -> str: ...
 52 | 
 53 | @final
 54 | class HasOverloadSub(HasOverloads): ...  # error: [abstract-method-in-final-class]
 55 | 
 56 | class RaisesDifferentException(Protocol):
 57 |     def not_abstractmethod(self) -> int:
 58 |         raise TypeError
 59 | 
 60 | @final
 61 | class RaisesDifferentSub(RaisesDifferentException): ...
 62 | 
 63 | class RaisesMultiple(Protocol):
 64 |     def not_abstractmethod(self) -> int:
 65 |         raise NotImplementedError
 66 |         raise NotImplementedError
 67 | 
 68 | @final
 69 | class RaisesMultipleSub(RaisesMultiple): ...
 70 | 
 71 | class HasAbstract(Protocol):
 72 |     def a(self) -> int: ...
 73 | 
 74 | class HasAbstract2(Protocol):
 75 |     def a(self) -> int:
 76 |         pass
 77 | 
 78 | class HasAbstract3(Protocol):
 79 |     def a(self) -> int:
 80 |         """My awesome docs"""
 81 | 
 82 | class HasAbstract4(Protocol):
 83 |     def a(self) -> int:
 84 |         """My awesome docs"""
 85 |         ...
 86 | 
 87 | class HasAbstract5(Protocol):
 88 |     def a(self) -> int:
 89 |         """My awesome docs"""
 90 |         pass
 91 | 
 92 | class HasAbstract6(Protocol):
 93 |     def a(self) -> int:
 94 |         """My awesome docs"""
 95 |         pass
 96 |         ...
 97 |         pass
 98 |         ...
 99 |         pass
100 |         pass
101 |         pass
102 |         ...
103 | 
104 | class HasAbstract7(Protocol):
105 |     def a(self) -> int:
106 |         raise NotImplementedError
107 | 
108 | class HasAbstract8(Protocol):
109 |     def a(self) -> int:
110 |         raise NotImplementedError()
111 | 
112 | class HasAbstract9(Protocol):
113 |     def a(self) -> int:
114 |         """My awesome docs"""
115 |         raise NotImplementedError
116 | 
117 | class HasAbstract10(Protocol):
118 |     def a(self) -> int:
119 |         """My awesome docs"""
120 |         raise NotImplementedError()
121 | 
122 | @final
123 | class HasAbstractSub(HasAbstract): ...  # error: [abstract-method-in-final-class]
124 | 
125 | @final
126 | class HasAbstract2Sub(HasAbstract2): ...  # error: [abstract-method-in-final-class]
127 | 
128 | @final
129 | class HasAbstract3Sub(HasAbstract4): ...  # error: [abstract-method-in-final-class]
130 | 
131 | @final
132 | class HasAbstract4Sub(HasAbstract4): ...  # error: [abstract-method-in-final-class]
133 | 
134 | @final
135 | class HasAbstract5Sub(HasAbstract5): ...  # error: [abstract-method-in-final-class]
136 | 
137 | @final
138 | class HasAbstract6Sub(HasAbstract6): ...  # error: [abstract-method-in-final-class]
139 | 
140 | @final
141 | class HasAbstract7Sub(HasAbstract7): ...  # error: [abstract-method-in-final-class]
142 | 
143 | @final
144 | class HasAbstract8Sub(HasAbstract8): ...  # error: [abstract-method-in-final-class]
145 | 
146 | @final
147 | class HasAbstract9Sub(HasAbstract9): ...  # error: [abstract-method-in-final-class]
148 | 
149 | @final
150 | class HasAbstract10Sub(HasAbstract10): ...  # error: [abstract-method-in-final-class]
```

# Diagnostics

```
error[abstract-method-in-final-class]: Final class `Q` has unimplemented abstract methods
  --> src/mdtest_snippet.py:14:7
   |
11 |     def still_abstractmethod(self): ...
   |     ----------------------------------- `still_abstractmethod` declared as abstract on superclass `P`
12 |
13 | @final
   | ------
14 | class Q(P): ...  # error: [abstract-method-in-final-class]
   |       ^ `still_abstractmethod` is unimplemented
   |
info: `P.still_abstractmethod` is implicitly abstract because `P` is a `Protocol` class and `still_abstractmethod` lacks an implementation
 --> src/mdtest_snippet.py:3:7
  |
3 | class P(Protocol):
  |       ----------- `P` declared here
  |
help: Change the body of `still_abstractmethod` to `return` or `return None` if it was not intended to be abstract

```

```
error[abstract-method-in-final-class]: Final class `S` has unimplemented abstract methods
  --> src/mdtest_snippet.py:21:7
   |
18 |     def also_still_abstractmethod(self) -> None: ...
   |     ------------------------------------------------ `also_still_abstractmethod` declared as abstract on superclass `R`
19 |
20 | @final
   | ------
21 | class S(R): ...  # error: [abstract-method-in-final-class]
   |       ^ `also_still_abstractmethod` is unimplemented
   |
info: `R.also_still_abstractmethod` is implicitly abstract because `R` is a `Protocol` class and `also_still_abstractmethod` lacks an implementation
  --> src/mdtest_snippet.py:16:7
   |
16 | class R(Protocol):
   |       ----------- `R` declared here
   |
help: Change the body of `also_still_abstractmethod` to `return` or `return None` if it was not intended to be abstract

```

```
error[abstract-method-in-final-class]: Final class `RaisesSub` has unimplemented abstract methods
  --> src/mdtest_snippet.py:28:7
   |
24 | /     def even_this_is_abstract(self):
25 | |         raise NotImplementedError
   | |_________________________________- `even_this_is_abstract` declared as abstract on superclass `Raises`
26 |
27 |   @final
   |   ------
28 |   class RaisesSub(Raises): ...  # error: [abstract-method-in-final-class]
   |         ^^^^^^^^^ `even_this_is_abstract` is unimplemented
   |
info: `Raises.even_this_is_abstract` is implicitly abstract because `Raises` is a `Protocol` class and `even_this_is_abstract` lacks an implementation
  --> src/mdtest_snippet.py:23:7
   |
23 | class Raises(Protocol):
   |       ---------------- `Raises` declared here

```

```
error[abstract-method-in-final-class]: Final class `AlsoRaisesSub` has unimplemented abstract methods
  --> src/mdtest_snippet.py:35:7
   |
31 | /     def also_abstractmethod(self) -> Never:
32 | |         raise NotImplementedError
   | |_________________________________- `also_abstractmethod` declared as abstract on superclass `AlsoRaises`
33 |
34 |   @final
   |   ------
35 |   class AlsoRaisesSub(AlsoRaises): ...  # error: [abstract-method-in-final-class]
   |         ^^^^^^^^^^^^^ `also_abstractmethod` is unimplemented
   |
info: `AlsoRaises.also_abstractmethod` is implicitly abstract because `AlsoRaises` is a `Protocol` class and `also_abstractmethod` lacks an implementation
  --> src/mdtest_snippet.py:30:7
   |
30 | class AlsoRaises(Protocol):
   |       -------------------- `AlsoRaises` declared here

```

```
error[abstract-method-in-final-class]: Final class `StrangeSub` has unimplemented abstract methods
  --> src/mdtest_snippet.py:45:11
   |
41 | /         def weird_abstractmethod(self):
42 | |             raise x
   | |___________________- `weird_abstractmethod` declared as abstract on superclass `Strange`
43 |
44 |       @final
   |       ------
45 |       class StrangeSub(Strange): ...  # error: [abstract-method-in-final-class]
   |             ^^^^^^^^^^ `weird_abstractmethod` is unimplemented
   |
info: `Strange.weird_abstractmethod` is implicitly abstract because `Strange` is a `Protocol` class and `weird_abstractmethod` lacks an implementation
  --> src/mdtest_snippet.py:40:11
   |
40 |     class Strange(Protocol):
   |           ----------------- `Strange` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasOverloadSub` has unimplemented abstract methods
  --> src/mdtest_snippet.py:54:7
   |
51 |     def foo(self, x: int) -> str: ...
   |         --- `foo` declared as abstract on superclass `HasOverloads`
52 |
53 | @final
   | ------
54 | class HasOverloadSub(HasOverloads): ...  # error: [abstract-method-in-final-class]
   |       ^^^^^^^^^^^^^^ `foo` is unimplemented
   |
info: `HasOverloads.foo` is implicitly abstract because `HasOverloads` is a `Protocol` class and `foo` lacks an implementation
  --> src/mdtest_snippet.py:47:7
   |
47 | class HasOverloads(Protocol):
   |       ---------------------- `HasOverloads` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstractSub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:123:7
    |
122 | @final
    | ------
123 | class HasAbstractSub(HasAbstract): ...  # error: [abstract-method-in-final-class]
    |       ^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:72:5
    |
 72 |     def a(self) -> int: ...
    |     ----------------------- `a` declared as abstract on superclass `HasAbstract`
    |
info: `HasAbstract.a` is implicitly abstract because `HasAbstract` is a `Protocol` class and `a` lacks an implementation
  --> src/mdtest_snippet.py:71:7
   |
71 | class HasAbstract(Protocol):
   |       --------------------- `HasAbstract` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstract2Sub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:126:7
    |
125 |   @final
    |   ------
126 |   class HasAbstract2Sub(HasAbstract2): ...  # error: [abstract-method-in-final-class]
    |         ^^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:75:5
    |
 75 | /     def a(self) -> int:
 76 | |         pass
    | |____________- `a` declared as abstract on superclass `HasAbstract2`
    |
info: `HasAbstract2.a` is implicitly abstract because `HasAbstract2` is a `Protocol` class and `a` lacks an implementation
  --> src/mdtest_snippet.py:74:7
   |
74 | class HasAbstract2(Protocol):
   |       ---------------------- `HasAbstract2` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstract3Sub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:129:7
    |
128 | @final
    | ------
129 | class HasAbstract3Sub(HasAbstract4): ...  # error: [abstract-method-in-final-class]
    |       ^^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:83:5
    |
 83 |     def a(self) -> int:
    |     ------------------ `a` declared as abstract on superclass `HasAbstract4`
    |
info: `HasAbstract4.a` is implicitly abstract because `HasAbstract4` is a `Protocol` class and `a` lacks an implementation
  --> src/mdtest_snippet.py:82:7
   |
82 | class HasAbstract4(Protocol):
   |       ---------------------- `HasAbstract4` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstract4Sub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:132:7
    |
131 | @final
    | ------
132 | class HasAbstract4Sub(HasAbstract4): ...  # error: [abstract-method-in-final-class]
    |       ^^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:83:5
    |
 83 |     def a(self) -> int:
    |     ------------------ `a` declared as abstract on superclass `HasAbstract4`
    |
info: `HasAbstract4.a` is implicitly abstract because `HasAbstract4` is a `Protocol` class and `a` lacks an implementation
  --> src/mdtest_snippet.py:82:7
   |
82 | class HasAbstract4(Protocol):
   |       ---------------------- `HasAbstract4` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstract5Sub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:135:7
    |
134 | @final
    | ------
135 | class HasAbstract5Sub(HasAbstract5): ...  # error: [abstract-method-in-final-class]
    |       ^^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:88:5
    |
 88 |     def a(self) -> int:
    |     ------------------ `a` declared as abstract on superclass `HasAbstract5`
    |
info: `HasAbstract5.a` is implicitly abstract because `HasAbstract5` is a `Protocol` class and `a` lacks an implementation
  --> src/mdtest_snippet.py:87:7
   |
87 | class HasAbstract5(Protocol):
   |       ---------------------- `HasAbstract5` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstract6Sub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:138:7
    |
137 | @final
    | ------
138 | class HasAbstract6Sub(HasAbstract6): ...  # error: [abstract-method-in-final-class]
    |       ^^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:93:5
    |
 93 |     def a(self) -> int:
    |     ------------------ `a` declared as abstract on superclass `HasAbstract6`
    |
info: `HasAbstract6.a` is implicitly abstract because `HasAbstract6` is a `Protocol` class and `a` lacks an implementation
  --> src/mdtest_snippet.py:92:7
   |
92 | class HasAbstract6(Protocol):
   |       ---------------------- `HasAbstract6` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstract7Sub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:141:7
    |
140 |   @final
    |   ------
141 |   class HasAbstract7Sub(HasAbstract7): ...  # error: [abstract-method-in-final-class]
    |         ^^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:105:5
    |
105 | /     def a(self) -> int:
106 | |         raise NotImplementedError
    | |_________________________________- `a` declared as abstract on superclass `HasAbstract7`
    |
info: `HasAbstract7.a` is implicitly abstract because `HasAbstract7` is a `Protocol` class and `a` lacks an implementation
   --> src/mdtest_snippet.py:104:7
    |
104 | class HasAbstract7(Protocol):
    |       ---------------------- `HasAbstract7` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstract8Sub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:144:7
    |
143 |   @final
    |   ------
144 |   class HasAbstract8Sub(HasAbstract8): ...  # error: [abstract-method-in-final-class]
    |         ^^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:109:5
    |
109 | /     def a(self) -> int:
110 | |         raise NotImplementedError()
    | |___________________________________- `a` declared as abstract on superclass `HasAbstract8`
    |
info: `HasAbstract8.a` is implicitly abstract because `HasAbstract8` is a `Protocol` class and `a` lacks an implementation
   --> src/mdtest_snippet.py:108:7
    |
108 | class HasAbstract8(Protocol):
    |       ---------------------- `HasAbstract8` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstract9Sub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:147:7
    |
146 | @final
    | ------
147 | class HasAbstract9Sub(HasAbstract9): ...  # error: [abstract-method-in-final-class]
    |       ^^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:113:5
    |
113 |     def a(self) -> int:
    |     ------------------ `a` declared as abstract on superclass `HasAbstract9`
    |
info: `HasAbstract9.a` is implicitly abstract because `HasAbstract9` is a `Protocol` class and `a` lacks an implementation
   --> src/mdtest_snippet.py:112:7
    |
112 | class HasAbstract9(Protocol):
    |       ---------------------- `HasAbstract9` declared here

```

```
error[abstract-method-in-final-class]: Final class `HasAbstract10Sub` has unimplemented abstract methods
   --> src/mdtest_snippet.py:150:7
    |
149 | @final
    | ------
150 | class HasAbstract10Sub(HasAbstract10): ...  # error: [abstract-method-in-final-class]
    |       ^^^^^^^^^^^^^^^^ `a` is unimplemented
    |
   ::: src/mdtest_snippet.py:118:5
    |
118 |     def a(self) -> int:
    |     ------------------ `a` declared as abstract on superclass `HasAbstract10`
    |
info: `HasAbstract10.a` is implicitly abstract because `HasAbstract10` is a `Protocol` class and `a` lacks an implementation
   --> src/mdtest_snippet.py:117:7
    |
117 | class HasAbstract10(Protocol):
    |       ----------------------- `HasAbstract10` declared here

```
